--- a/app/src/main/res/layout/activity_view_request_status.xml
+++ b/app/src/main/res/layout/activity_view_request_status.xml
@@ -1,124 +1,152 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp"
-    android:gravity="center_vertical"
-    tools:context=".ViewRequestStatusActivity">
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@drawable/appbkg"
+    tools:context=".MainActivity">
 
-
-    <TextView
-        android:id="@+id/textViewRequestId"
-        android:layout_width="wrap_content"
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/requestid"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp"/>
+        android:layout_margin="30dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp"
+        android:background="@drawable/custom_edittext">
 
-    <TextView
-        android:id="@+id/textViewCompanyName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/companyname"
-        android:textSize="16sp"
-        android:layout_below="@id/textViewRequestId"
-        android:textStyle="bold"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="16dp"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:padding="24dp">
 
-    <TextView
-        android:id="@+id/textViewAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/address"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewCompanyName"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewEmailAddress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/companyemail"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewAddress"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewPhoneNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/phonenumber"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewEmailAddress"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewActivityType"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/typeofactivity"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewPhoneNumber"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewFullName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/fullname"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewActivityType"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewDateOfBirth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/dateofbirth"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewFullName"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewNationality"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/nationality"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewDateOfBirth"
-        android:layout_marginBottom="8dp"/>
-
-    <TextView
-        android:id="@+id/textViewIdNumber"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/idnumber"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewNationality"
-        android:layout_marginBottom="8dp"/>
+            <TextView
+                android:id="@+id/textViewRequestId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/request"
+                android:textSize="20sp"
+                android:textAlignment="center"
+                android:textStyle="bold"
+                android:textColor="@color/brand_blue"
+                android:gravity="center_horizontal" />
 
 
 
-    <TextView
-        android:id="@+id/textViewState"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/state"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_below="@id/textViewIdNumber"
-        android:layout_marginTop="16dp"/>
+            <TextView
+                android:id="@+id/textViewCompanyName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/companyname"
+                android:textSize="16sp"
+                android:layout_below="@id/textViewRequestId"
+                android:textStyle="bold"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"/>
 
-</RelativeLayout>
+            <TextView
+                android:id="@+id/textViewAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/address"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewCompanyName"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewEmailAddress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/companyemail"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewAddress"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewPhoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/phonenumber"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewEmailAddress"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewActivityType"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/typeofactivity"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewPhoneNumber"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewFullName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/fullname"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewActivityType"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewDateOfBirth"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/dateofbirth"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewFullName"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewNationality"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/nationality"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewDateOfBirth"
+                android:layout_marginBottom="8dp"/>
+
+            <TextView
+                android:id="@+id/textViewIdNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/idnumber"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_below="@id/textViewNationality"
+                android:layout_marginBottom="8dp"/>
+
+
+
+            <TextView
+                android:id="@+id/textViewState"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/state"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:textColor="@color/brand_dark_orange"
+                android:layout_below="@id/textViewIdNumber"
+                android:layout_marginTop="16dp"/>
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
+
+
+</LinearLayout>
