--- a/app/src/main/res/layout/activity_submit_request.xml
+++ b/app/src/main/res/layout/activity_submit_request.xml
@@ -108,6 +108,8 @@
                 android:layout_marginTop="10dp"
                 android:padding="5dp"
                 android:hint="@string/dateofbirth"
+                android:focusable="false"
+                android:clickable="true"
                 android:background="@drawable/custom_edittext2"
                 android:inputType="date"/>
 
