--- a/app/src/main/res/layout/activity_view_request_status.xml
+++ b/app/src/main/res/layout/activity_view_request_status.xml
@@ -147,6 +147,54 @@
 
     </androidx.cardview.widget.CardView>
 
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="5dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_height="wrap_content"
+        android:textColor="@color/brand_grey"
+        android:text="@string/pending"/>
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="5dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:textColor="@color/brand_grey"
+        android:text="@string/examen"/>
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="5dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:textColor="@color/brand_green"
+        android:text="@string/accepted"/>
+
+    <TextView
+
+        android:layout_width="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="15dp"
+        android:layout_marginLeft="15dp"
+        android:layout_marginBottom="20dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="left"
+        android:textColor="@color/brand_dark_orange"
+        android:text="@string/rejected"/>
+
+
 
 
 </LinearLayout>
