--- a/app/src/main/res/layout/activity_submit_request.xml
+++ b/app/src/main/res/layout/activity_submit_request.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
     android:padding="16dp">
 
     <ScrollView
@@ -134,6 +135,26 @@
                 android:background="@drawable/custom_edittext2"
                 android:hint="@string/idnumber"
                 android:inputType="text"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/pdf"
+                android:textSize="25sp"
+                android:textColor="@color/brand_blue"
+                android:textStyle="bold"
+                android:layout_marginTop="16dp"/>
+
+            <Button
+                android:id="@+id/buttonChooseFile"
+                android:layout_width="wrap_content"
+                android:layout_height="35dp"
+                android:padding="5dp"
+                android:drawablePadding="8dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="@color/brand_grey"
+                android:text="@string/choosepdf"
+                android:onClick="chooseFile" />
 
 
             <CheckBox
